samples/_failures_safe/1761625580_a28601_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e27a121.c: In function ‘main’:
./samples/SAFE/__tmp_8e27a121.c:181:20: error: missing terminating " character
  181 |             printf("Syntax error at
      |                    ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8e27a121.c:181:13: error: expected expression at end of input
  181 |             printf("Syntax error at
      |             ^~~~~~
./samples/SAFE/__tmp_8e27a121.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e27a121.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e27a121.c:181:13: error: expected declaration or statement at end of input
